# Scikit-learn-POC

./: .gitignore  README.md  pyproject.toml
configs/: sample_houses.json
scripts/: explain_advanced.py  predict_advanced.py  train_advanced.py
src/housing_ml/: __init__.py  data.py  explain.py  modeling.py  predict.py  train.py
tests/: test_pipeline_smoke.py
