[project]
name = "housing-ml-poc"
version = "0.2.0"
description = "Advanced sklearn housing price workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.6",
  "joblib>=1.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
